changed the i > 10 to be i++ to populate all the listing and made the overflow scroll with a fixed height for both containers

--- a/src/App.css
+++ b/src/App.css
@@ -354,6 +354,13 @@ p {
   opacity: 0;
   position: relative;
   z-index: 4;
+  overflow-y: scroll;
+  margin-bottom: 75px;
+}
+
+.titles-wrapper {
+  position: relative;
+  height: 212px;
 }
 
 .TitleList .titles-wrapper {
